[package]
name = "wasm-sync-ws-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
log = "0.4"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.4"
serde = { version = "1.0", features = ["derive"] }

js-sys = { version = "0.3" }
web-sys = { version = "0.3", features = [
    "MessageEvent",
    "Worker",
    "WorkerOptions",
    "WorkerType",
] }

[package.release]
opt-level = 's'   # Size optimizations
lto = true        # Link-time-optimizations for further size reduction
codegen-units = 1 # Better optimizations
debug = true      # Symbols are nice and they don't increase the size
